src/App.css
#root {
  width: 100%;
}

/************************* NAVBAR *******************************/
.navBar input {
  display: none;
  z-index: 1000;
}

.navBar {
  position: fixed;
  top: 60px;
  z-index: 1000;
  width: 100%;
}

.menu-btn {
  position: absolute;
  z-index: 3;
  right: 40px;
  height: 50px;
  width: 50px;
  text-align: center;
  line-height: 50px;
  border-radius: 50%;
  font-size: 20px;
  cursor: pointer;
  /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
  transition: all 0.3s ease-in-out;
}

/* BURGUER MENU */
.menu-btn span,
.menu-btn:before,
.menu-btn:after {
  content: "";
  position: absolute;
  width: 45%;
  border-bottom: 4px solid #000;
  transition: transform .4s cubic-bezier(0.215, 0.61, 0.355, 1), opacity .3s ease;
  border-radius: 2px;
}

.menu-btn:before {
  transform: translateY(-8px);
}

.menu-btn:after {
  transform: translateY(8px);
}

/* BURGUER MENU ARROW DOWN ON HOVER */
.menu-btn:hover span {
  opacity: 0
    /* Hide the middle span on hover */
}

.menu-btn:hover:before {
  transform: translateX(7px) rotate(-45deg);
  /* Rotate top span to form arrow */
}

.menu-btn:hover:after {
  transform: translateX(-7px) rotate(45deg);
  /* Rotate bottom span to form arrow */
}

/* BURGUER MENU CROSS ON CLICK */
#active:checked+.menu-btn span {
  transform: scaleX(0);
}

#active:checked+.menu-btn:before {
  transform: rotate(45deg);
  border-color: #fff;
  width: 55%;
}

#active:checked+.menu-btn:after {
  transform: rotate(-45deg);
  border-color: #fff;
  width: 55%;
}

/* BURGUER MENU ARROW UP ON HOVER */
#active:checked+.menu-btn:hover:before {
  transform: translateX(9px) rotate(45deg);
  /* Rotate the top span to form arrow pointing up */
}

#active:checked+.menu-btn:hover:after {
  transform: translateX(-9px) rotate(-45deg);
  /* Rotate the bottom span to form arrow pointing up */
}

.dropdownMenu {
  position: fixed;
  top: -100%;
  height: 100%;
  width: 100%;
  background: -webkit-linear-gradient(-45deg, #a4c6fa 0%, #e3b8ff 100%);
  transition: all 0.4s ease-in-out;
  z-index: 2;
}

#active:checked~.dropdownMenu {
  top: 0%;
}

.dropdownMenu ul {
  position: absolute;
  top: 80%;
  left: 44%;
  height: 90%;
  transform: translate(-50%, -50%);
  list-style: none;
  text-align: center;
  width: 100%;
}

.dropdownMenu ul li {
  height: 10%;
  margin: 15px 0;
}

.dropdownMenu ul li a {
  text-decoration: none;
  font-size: 30px;
  font-weight: 600;
  padding: 5px 30px;
  color: #fff;
  position: absolute;
  line-height: 50px;
  margin: 5px 30px;
  transition: all 0.5s ease;
}

.dropdownMenu ul li a:hover {
  color: #744792;
}
/* .close {
	z-index: 1;
	width: 100%;
	height: 100%;
	pointer-events: none;
	transition: background .6s;
} */

.socialIcon {
  position: fixed;
  top: 50%;
  left: -80px;
  transform: translateY(-50%);
  width: 150px;
  height: 70px;
  background: -webkit-linear-gradient(-45deg, #a4c6fa 0%, #e3b8ff 100%);
  overflow: hidden;
  transition: all 0.3s ease;
z-index: 10;
}

.socialIcon:hover {
  left: 0; /* Expand on hover */
}

.socialIconLink {
  display: flex;
  justify-content:flex-end;
  align-items: center;
  width: 100%;
  height: 100%;
  color: #ffffff;
  text-decoration: none;
  font-size: 2rem;
  padding-right: 20px;
  gap: 20px;
}
.socialIconLink p {
  color: white;
}
@media (max-width: 576px) {
  .socialIcon {
    display: none;
  }
}
/************************* WRAPPER *******************************/
.wrapper {
  width: 90%;
  max-width: 1080px;
  margin: 0 auto;
}

p {
  font-size: 1.2rem;
  line-height: 1.3;
  font-weight: 250;
  color: #707070;
}

.sectionTextWrapper {
  display: flex;
  gap: 20px;
  justify-content: center;
}

.title {
  background: -webkit-linear-gradient(-45deg, #a4c6fa 0%, #e3b8ff 100%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  margin-bottom: 50px;
}
@media (max-width: 576px) {
 
  .sectionTextWrapper h1 {
    font-size: 1.7rem;
  }
}
a {
  text-decoration: none;
}

button {
  font-size: 0.9rem;
  border: 2px solid rgb(155, 155, 155);
  border-radius: 50px;
  text-transform: uppercase;
  padding: 15px 20px 15px 20px;
  color: rgb(138, 138, 138);
  font-weight: bold;
  background: none;
  cursor: pointer;
  transition: 0.3s ease;
  display: flex;
  align-items: center;
  gap: 5px;
}

button:hover {
  background: linear-gradient(-45deg, #a4c6fa 0%, #e3b8ff 100%);
  color: white;
  border: 2px solid white;
}

.icon {
  font-size: 1.3rem;
}
@media (max-width: 576px) {
  button {
    font-size: 0.7rem;
    padding: 10px 15px 10px 15px;
  }
  .icon {
    font-size: 1rem;
  }
}
/************************* HEADER *******************************/

.header {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.headerText {
  width: 100%;
  text-align: justify;
  text-justify: inter-word;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.hi {
  margin-bottom: -10px;
  /* background: -webkit-linear-gradient(#a4c6fa 0%, #e3b8ff 100%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent; */
  font-weight: 800;
  /* color: #dc92ff; */
  color: #b9b9b9;
}
.headerText h1 {
  font-size: 4rem;
  font-weight: 700;
  background: -webkit-linear-gradient(#7dacf3 0%, #bc64f7 100%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  margin-bottom: -20px;
  color: #808080;
}
.headerText h2 {
  color: #808080;
  font-size: 2.95rem;
  background: -webkit-linear-gradient(#7dacf3 0%, #bc64f7 100%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  opacity: 0.7;
}
.headerText p {
  max-width: 563px;
}
.headerText button {
  margin-top: 20px;
}
.arrowDown {
  position: absolute;
  padding-top: 90vh;
  font-size: 50px;
  animation: moveUpDown 2s infinite;
  cursor: pointer;
}
/* ... */

